k8s/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: csearch-api
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.csearch.org
      secretName: csearch-api-tls
  rules:
    - host: api.csearch.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: csearch-api
                port:
                  number: 80
